<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/view_staff"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_man" />

    <TextView
        android:id="@+id/view_name_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@+id/view_staff"
        android:text="@string/view_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/view_staff"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/staff_id_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="190901"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/view_department_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_name_staff"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/view_staff"
        android:text="@string/view_department"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/view_staff"
        app:layout_constraintTop_toBottomOf="@+id/view_name_staff" />

    <TextView
        android:id="@+id/view_pay_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_department_staff"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/view_staff"
        android:text="@string/view_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/view_staff"
        app:layout_constraintTop_toBottomOf="@+id/view_department_staff" />

    <TextView
        android:id="@+id/view_mobile_staff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_pay_staff"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/view_staff"
        android:text="0125987323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toEndOf="@+id/view_staff"
        app:layout_constraintTop_toBottomOf="@+id/view_pay_staff" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/view_mobile_staff"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />
</RelativeLayout>